--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ langdetect==1.0.9
 ratelimit==2.2.1
 deep-translator==1.11.4
 google-api-python-client==2.151.0
+rapidfuzz==3.9.6
+fastembed
+email-validator
+phonenumberslite
