--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-streamlit>=1.28.0
-groq>=0.4.0
-ratelimit>=2.2.1
-langdetect>=1.0.9
-deep-translator>=1.11.4
-rapidfuzz>=3.0.0
-requests>=2.31.0
-fastembed>=0.3.0
+streamlit==1.45.0
+pandas==2.2.3
+gspread==6.2.0
+groq==0.24.0
+google-auth==2.40.1
+tenacity==8.5.0
+langdetect==1.0.9
+ratelimit==2.2.1
+deep-translator==1.11.4
+google-api-python-client==2.151.0
+rapidfuzz==3.9.6
+fastembed
+email-validator
+phonenumberslite
